--- a/.github/workflows/release-on-merge.yaml
+++ b/.github/workflows/release-on-merge.yaml
@@ -28,6 +28,9 @@ jobs:
     if: ${{ needs.get-changed-images.outputs.addedOrModified == 'true' }}
     uses: wipash/containers/.github/workflows/build-images.yaml@main
     secrets: inherit
+    permissions:
+      contents: read
+      packages: write
     with:
       appsToBuild: "${{ needs.get-changed-images.outputs.addedOrModifiedImages }}"
       pushImages: true
