Only build amd64

--- a/apps/home-assistant/metadata.yaml
+++ b/apps/home-assistant/metadata.yaml
@@ -3,7 +3,7 @@ app: home-assistant
 base: false
 channels:
   - name: stable
-    platforms: ["linux/amd64", "linux/arm64"]
+    platforms: ["linux/amd64"]
     stable: true
     tests:
       enabled: true
