--- a/.github/workflows/release-scheduled.yaml
+++ b/.github/workflows/release-scheduled.yaml
@@ -18,8 +18,8 @@ on:
         type: boolean
         default: false
         required: true
-  schedule:
-    - cron: "0 * * * *"
+ # schedule:
+  #  - cron: "0 * * * *"
 
 jobs:
   simple-checks:
