--- a/apps/actions-runner/metadata.yaml
+++ b/apps/actions-runner/metadata.yaml
@@ -1,7 +1,6 @@
 ---
 app: actions-runner
-base: false
-semantic_versioning: true
+semver: true
 channels:
   - name: stable
     platforms: ["linux/amd64"]
