--- a/.github/workflows/pr-validate.yaml
+++ b/.github/workflows/pr-validate.yaml
@@ -1,27 +1,21 @@
 ---
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
-name: Release on Merge
-
-concurrency:
-  group: container-release
-  cancel-in-progress: false
+name: "Pull Request: Validate"
 
 on:
-  push:
+  pull_request:
     branches: ["main"]
-    paths:
-      - "apps/**"
-      - ".github/scripts/templates/**"
-      - "!apps/**/metadata.json"
-      - "!apps/**/metadata.yaml"
-      - "!apps/**/README.md"
+    types: ["opened", "synchronize", "reopened"]
+
+concurrency:
+  group: ${{ github.head_ref }}-pr-validate
+  cancel-in-progress: true
 
 jobs:
   simple-checks:
     uses: wipash/containers/.github/workflows/simple-checks.yaml@main
 
   get-changed-images:
-    needs: ["simple-checks"]
     uses: wipash/containers/.github/workflows/get-changed-images.yaml@main
 
   build-images:
@@ -31,12 +25,5 @@ jobs:
     secrets: inherit
     with:
       appsToBuild: "${{ needs.get-changed-images.outputs.addedOrModifiedImages }}"
-      pushImages: true
-      sendNotifications: true
-
-  # render-readme:
-  #   name: Render Readme
-  #   needs: build-images
-  #   if: ${{ always() && needs.build-images.result != 'failure' }}
-  #   uses: ./.github/workflows/render-readme.yaml
-  #   secrets: inherit
+      pushImages: false
+      sendNotifications: false
