--- a/.github/workflows/simple-checks.yaml
+++ b/.github/workflows/simple-checks.yaml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: "Simple Checks"
 
 on:
@@ -11,25 +12,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Collect changed files
-        uses: dorny/paths-filter@v3
-        id: filter
         with:
-          list-files: shell
-          filters: |
+          fetch-depth: 0
+
+      - name: Get Changed Files
+        id: changed-files
+        uses: tj-actions/changed-files@v44
+        with:
+          files_yaml: |
             cue:
-              - added|modified: "apps/**/metadata.yaml"
-              - added|modified: "apps/**/metadata.json"
-              - added|modified: "./metadata.rules.cue"
+              - metadata.rules.cue
+              - apps/**/metadata.json
+              - apps/**/metadata.yaml
 
       - name: Setup CUE
-        if: ${{ steps.filter.outputs.cue == 'true' }}
+        if: ${{ steps.changed-files.outputs.cue_any_changed == 'true' }}
         uses: cue-lang/setup-cue@v1.0.1
 
       # Run against all files to ensure they are tested if the cue schema is changed.
       - name: Validate image metadata
-        if: ${{ steps.filter.outputs.cue == 'true' }}
+        if: ${{ steps.changed-files.outputs.cue_any_changed == 'true' }}
         shell: bash
         run: |
           find ./apps/ -name metadata.json | xargs -I {} cue vet --schema '#Spec' {} ./metadata.rules.cue
