--- a/apps/home-assistant/Dockerfile
+++ b/apps/home-assistant/Dockerfile
@@ -1,9 +1,4 @@
-FROM ghcr.io/wipash/alpine:rolling
-
-# https://github.com/linuxserver/docker-homeassistant
-# https://github.com/home-assistant/docker
-# https://github.com/home-assistant/docker-base
-# https://github.com/pypa/pip/issues/10788
+FROM docker.io/library/python:3.12-alpine
 
 ARG TARGETPLATFORM
 ARG VERSION
@@ -16,116 +11,96 @@ ENV \
     PIP_NO_CACHE_DIR=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=1 \
     PIP_BREAK_SYSTEM_PACKAGES=1 \
-    ALPINE_WHEELS="https://wheel-index.linuxserver.io/alpine-3.18/" \
-    HOMEASSISTANT_WHEELS="https://wheel-index.linuxserver.io/homeassistant-3.18/" \
-    PYTHONPATH="${PYTHONPATH}:/pip-packages" \
+    HOMEASSISTANT_WHEELS="https://wheels.home-assistant.io/musllinux/" \
     HOME="/config"
 
-WORKDIR /tmp
+ENV UMASK="0002" \
+    TZ="Etc/UTC"
 
-#hadolint ignore=DL3018
-RUN \
-    apk add --no-cache \
-        bluez \
-        bluez-deprecated \
-        bluez-libs \
-        ca-certificates \
-        cups-libs \
-        eudev-libs \
-        ffmpeg \
-        git \
-        libcap \
-        libjpeg-turbo \
-        libstdc++ \
-        libxslt \
-        mariadb-connector-c \
-        mariadb-connector-c-dev \
-        openssh-client \
-        openssl \
-        postgresql-libs \
-        py3-pip \
-        python3 \
-        socat \
-        tiff
-
-#hadolint ignore=DL3018,DL3013,DL3059
-RUN \
-    apk add --no-cache --virtual=.build-deps \
-        autoconf \
-        build-base \
-        cargo \
-        cmake \
-        cups-dev \
-        eudev-dev \
-        ffmpeg-dev \
-        glib-dev \
-        jpeg-dev \
-        libffi-dev \
-        libxml2-dev \
-        libxslt-dev \
-        postgresql-dev \
-        python3-dev \
-        unixodbc-dev
-
-#hadolint ignore=DL3018,DL3013,DL3059
-RUN \
-    pip install --upgrade \
-        cython \
-        pip \
-        pyparsing \
-        setuptools \
-        wheel
+USER root
+WORKDIR /app
 
 #hadolint ignore=DL3018,DL3013,DL3059,DL4006
 RUN \
+    apk add --no-cache \
+    bash \
+    bluez \
+    bluez-deprecated \
+    bluez-libs \
+    ca-certificates \
+    catatonit \
+    cups-libs \
+    curl \
+    eudev-libs \
+    ffmpeg \
+    git \
+    jq \
+    libcap \
+    libturbojpeg \
+    libstdc++ \
+    libxslt \
+    mariadb-connector-c \
+    mariadb-connector-c-dev \
+    nano \
+    openssh-client \
+    openssl \
+    postgresql-libs \
+    socat \
+    tiff \
+    tzdata \
+    unzip \
+    && \
+    apk add --no-cache --virtual=.build-deps \
+    autoconf \
+    build-base \
+    cargo \
+    cmake \
+    cups-dev \
+    eudev-dev \
+    ffmpeg-dev \
+    glib-dev \
+    jpeg-dev \
+    libffi-dev \
+    libxml2-dev \
+    libxslt-dev \
+    postgresql-dev \
+    unixodbc-dev \
+    && \
+    pip install uv \
+    && \
     curl -fsSL "https://github.com/home-assistant/core/archive/${VERSION}.tar.gz" \
-        | tar xzf - -C /tmp --strip-components=1 \
-    && \
-    mkdir -p /pip-packages \
-    && \
-    pip install \
-        --upgrade \
-        --target /pip-packages \
-        distlib \
-    && \
-    NUMPY_VERSION=$(grep "numpy" requirements_all.txt) \
-    && \
-    pip install --find-links "${ALPINE_WHEELS}" --find-links "${HOMEASSISTANT_WHEELS}" \
-        "${NUMPY_VERSION}" \
+    | tar xzf - -C /tmp --strip-components=1 \
     && \
     case "${TARGETPLATFORM}" in \
-        'linux/amd64') \
-            export ARCH='amd64'; \
-        ;; \
-        'linux/arm64') \
-            export ARCH='aarch64'; \
-        ;; \
+    'linux/amd64') \
+    export ARCH='amd64'; \
+    ;; \
+    'linux/arm64') \
+    export ARCH='aarch64'; \
+    ;; \
     esac \
     && \
     HOME_ASSISTANT_BASE=$(curl -fsSL "https://raw.githubusercontent.com/home-assistant/core/${VERSION}/build.yaml" | grep "${ARCH}: " | cut -d ":" -f3) \
     && \
-    pip install --no-index --only-binary=:all: --find-links "${ALPINE_WHEELS}" --find-links "${HOMEASSISTANT_WHEELS}" \
-        --requirement "https://raw.githubusercontent.com/home-assistant/docker/${HOME_ASSISTANT_BASE}/requirements.txt" \
+    uv pip install --system --only-binary=:all: --find-links "${HOMEASSISTANT_WHEELS}" \
+    --requirement "https://raw.githubusercontent.com/home-assistant/docker/${HOME_ASSISTANT_BASE}/requirements.txt" \
     && \
-    pip install --find-links "${ALPINE_WHEELS}" --find-links "${HOMEASSISTANT_WHEELS}" \
-        --requirement requirements_all.txt \
+    uv pip install --system --only-binary=:all: --find-links "${HOMEASSISTANT_WHEELS}" \
+    --requirement /tmp/requirements_all.txt \
     && \
-    pip install --only-binary=:all: --find-links "${ALPINE_WHEELS}" --find-links "${HOMEASSISTANT_WHEELS}" \
-        homeassistant=="${VERSION}" \
-    && \
-    pip install --find-links "${ALPINE_WHEELS}" --find-links "${HOMEASSISTANT_WHEELS}" \
-        pycups PySwitchbot \
+    uv pip install --system --only-binary=:all: --find-links "${HOMEASSISTANT_WHEELS}" \
+    homeassistant=="${VERSION}" \
     && \
     apk del --purge .build-deps \
     && \
     rm -rf \
-        /root/.cache \
-        /root/.cargo \
-        /tmp/*
+    /root/.cache \
+    /root/.cargo \
+    /tmp/*
 
-WORKDIR /app
-USER kah
 COPY ./apps/home-assistant/entrypoint.sh /entrypoint.sh
+
+ENTRYPOINT ["/usr/bin/catatonit", "--"]
 CMD ["/entrypoint.sh"]
 
 LABEL org.opencontainers.image.source="https://github.com/home-assistant/core"
