--- a/apps/plandex/ci/goss.yaml
+++ b/apps/plandex/ci/goss.yaml
@@ -1,14 +1,14 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/goss-org/goss/master/docs/schema.yaml
-process:
-  plandex-server:
-    running: true
+# process:
+#   plandex-server:
+#     running: true
 file:
-  /app/server/plandex-server:
+  /app/plandex-server:
     exists: true
-port:
-  tcp6:8080:
-    listening: true
-http:
-  http://localhost:8080/health:
-    status: 200
+# port:
+#   tcp6:8080:
+#     listening: true
+# http:
+#   http://localhost:8080/health:
+#     status: 200
