--- a/apps/hi-events/Dockerfile
+++ b/apps/hi-events/Dockerfile
@@ -39,9 +39,9 @@ WORKDIR /app
 # Copy application files from builder stage
 COPY --from=builder /src/backend /app/backend
 COPY --from=builder /src/frontend /app/frontend
-COPY --from=builder /src/docker/all-in-one/nginx/nginx.conf /etc/nginx/nginx.conf
-COPY --from=builder /src/docker/all-in-one/supervisor/supervisord.conf /etc/supervisord.conf
-COPY --from=builder /src/docker/all-in-one/scripts/startup.sh /startup.sh
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY supervisord.conf /etc/supervisord.conf
+COPY startup.sh /startup.sh
 
 # Set up directories and permissions
 RUN mkdir -p /app/backend/bootstrap/cache \
@@ -54,6 +54,8 @@ RUN mkdir -p /app/backend/bootstrap/cache \
 
 # Make startup script executable
 RUN dos2unix /startup.sh && chmod +x /startup.sh
+
+USER www-data
 
 EXPOSE 5678
 
